--- a/junior_practices/widge_matplotlib.ipynb
+++ b/junior_practices/widge_matplotlib.ipynb
@@ -44,11 +44,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "26acae64-5248-4f4e-b57a-7ba978a73d5c",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-07-25T10:32:35.308036Z",
+     "start_time": "2025-07-25T10:32:34.809774Z"
+    }
+   },
+   "source": [
+    "# NBVAL_SKIP\n",
+    "# setting the backend in case this is run in a notebook\n",
+    "%matplotlib qt\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "import mpl_interactions.ipyplot as iplt\n",
+    "\n",
+    "x = np.linspace(0, np.pi, 100)\n",
+    "tau = np.linspace(1, 10, 100)\n",
+    "beta = np.linspace(0.001, 1)\n",
+    "\n",
+    "\n",
+    "def f(x, tau, beta):\n",
+    "    return np.sin(x * tau) * x**beta\n",
+    "\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "controls = iplt.plot(x, f, tau=tau, beta=beta, slider_formats={\"beta\": \"{:.3e}\"})\n",
+    "plt.show()"
+   ],
    "outputs": [],
-   "source": []
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "3a7051d2065b2729"
   }
  ],
  "metadata": {
